# TabStack

./: .gitattributes  .gitignore  AGENTS.md  Default (Linux).sublime-keymap  Default.sublime-keymap  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
plugin/: __init__.py  _compat.py  captions.py  commands.py  constants.py  history.py  linux_ctrl.py  listener.py  mru.py  session.py  sheets.py  state.py
plugin/ctrl_release/: __init__.py  _availability.py  linux.py  macos.py  windows.py
