[project]
name = "tab-stack"
version = "0.1.0"
description = "Per-window MRU tab stack for Sublime Text"
requires-python = ">=3.8"

[dependency-groups]
dev = [
  "ruff",
  "ty",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP045"]
